# dotfiles-universal

./: .gitignore  AGENTS.md  README.md  bootstrap.ps1  config.yaml  packages.psd1  setup.ps1
.beads/: config.yaml  dolt-server.activity  ephemeral.sqlite3  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.beads/dolt.20260304T220458Z.corrupt.backup/: .beads-credential-key  config.yaml
.opencode/: opencode.json
ai/agent-browser/: dot.yaml
ai/agent-skills/: dot.yaml
ai/agents/: dot.yaml  fact-checker.md
ai/aider/: aider.conf.yml
ai/atlassian-mcp/: dot.yaml
ai/beads/: dot.yaml  jira-import.py  jira-to-md.py
ai/brain-web/: dot.yaml
ai/claude/: AUTO_SKILLS.md  CLAUDE.md  dot.yaml  (+5 more)
cfg/: config.toml  dot.yaml  templates.toml
config/: packages.psd1
editors/neovim/pynvim/: dot.yaml  pyproject.toml
modules/: functions.ps1
tools/: catppuccin-mocha.conf
tools/cfg/: Cargo.toml  README.md  cfg.conf  cfg.desktop  cfg.zsh  dot.yaml  fonts.conf  fonts.toml  scratchpad.toml  tmux-wrapper.sh
tools/cfg/src/: color.rs  config.rs  fonts.rs  leds.rs  main.rs  palette.rs  render.rs  templates.rs  tmux_bridge.rs
tools/cfg/src/tui/: app.rs  clipboard.rs  colors.rs  fonts.rs  keyboard.rs  mod.rs  update.rs  wallpapers.rs
tools/cfg/src/tui/widgets/: font_preview.rs  fuzzy_input.rs  help.rs  mod.rs  toast.rs
tools/cfg/src/wallpaper/: analysis.rs  hyprpaper.rs  mod.rs  monitors.rs  picker.rs  processing.rs  scratchpad.rs  tags.rs
tools/cfg/tests/: cli.rs  tmux_wrapper.rs
(+905 files in other folders)
