[package]
name = "cfg"
version = "0.1.0"
edition = "2021"
description = "Linux Configuration Manager"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tera = "1"
glob = "0.3"
serde_json = "1"
base64 = "0.22"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
