[package]
name = "cfg"
version = "0.1.0"
edition = "2021"
description = "Linux Configuration Manager"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tera = "1"
glob = "0.3"
serde_json = "1"
base64 = "0.22"

# TUI
ratatui = "0.29"
crossterm = "0.28"
catppuccin = { version = "2", features = ["ratatui"] }
nucleo = "0.5"
ratatui-image = "8"
image = "0.25"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
